[gd_scene load_steps=8 format=2]

[ext_resource path="res://screens/abstract_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/win/win_screen.gd" type="Script" id=2]
[ext_resource path="res://fonts/GaroaHackerClubeBold.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]

size = 74
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]

resource_name = "score"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=1]

resource_name = "text"
length = 30.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Score/AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 30 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "score" ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=3]

resource_name = "title"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -8.95728, 0.0, 8.27941 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.31274, 1.31274 ), Vector2( 1, 1 ), Vector2( 1.31274, 1.31274 ) ]
}

[node name="WinScreen" instance=ExtResource( 1 )]

script = ExtResource( 2 )
next_scene = "res://screens/main/main_screen.tscn"

[node name="Label" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 220.0
margin_top = 235.0
margin_right = 858.0
margin_bottom = 378.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.94873, 0.75293, 0.486084, 1 )
text = "you supplied the corn market for a whole season!
i hope you learned about how supply-demand influences the prices of the market.

also, did you realized how law of marginal utility applies to your field? great!

your final score is:"
align = 3
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="Label" parent="."]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = 364.0
margin_right = 1022.0
margin_bottom = 470.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.657451, 0.822196, 0.466667, 1 )
text = "${score},00"
align = 1
valign = 1
percent_visible = 0.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Score"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/score = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="PlayAgain" type="Button" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 442.0
margin_top = 468.0
margin_right = 592.0
margin_bottom = 507.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play Again!!"
flat = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/text = SubResource( 1 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="Pivot" type="Node2D" parent="."]

position = Vector2( 485.286, 146.199 )

[node name="Title" type="Label" parent="Pivot"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -515.0
margin_top = -80.0
margin_right = 509.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.657451, 0.822196, 0.466667, 1 )
text = "congratulations!!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot/Title"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/title = SubResource( 3 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = "title"

[connection signal="button_up" from="PlayAgain" to="." method="_on_play_again"]


